--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,22 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "pinia": "^2.3.0",
-    "vant": "^4.9.14",
     "axios": "^1.7.9",
     "cesium": "^1.124.0",
-    "leaflet": "^1.9.4"
+    "pinia": "^2.3.0",
+    "vant": "^4.9.14",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "vite": "^6.0.7",
-    "vite-plugin-cesium": "^1.2.23",
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8.4.49",
-    "autoprefixer": "^10.4.20",
     "@vant/auto-import-resolver": "^1.3.0",
-    "unplugin-vue-components": "^0.27.5"
+    "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "unplugin-vue-components": "^0.27.5",
+    "vite": "^6.0.7",
+    "vite-plugin-cesium": "^1.2.23"
   }
 }
